--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -11,7 +11,7 @@
 \usepackage{paralist}
 \usepackage{xparse}
 \usepackage{enumitem}
-\usepackage[ruled, vlined]{algorithm2e}
+\usepackage[ruled, vlined]{env/algorithm2e}
 
 % ----------------------------------------------------------------------------- %
 % Float setup
