source for algorithm2e style file.

--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -12,6 +12,7 @@
 \usepackage{xparse}
 \usepackage{enumitem}
 \usepackage[ruled, vlined]{env/algorithm2e}
+% source: https://ctan.org/tex-archive/macros/latex/contrib/algorithm2e/tex
 
 % ----------------------------------------------------------------------------- %
 % Float setup
