--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,10 +1,9 @@
 % ---------------------------------------------------------------------------- %
 % file: disseration.tex
-% author: Michael Pilosov
+% author: YOUR NAME HERE
 %
-% LaTeX based on work by Sarah Kreidler and Peter DeWitt
+% LaTeX based on work by Michael Pilosov and Sarah Kreidler and Peter DeWitt
 % (github.com/dewittpe/ucd-dissertation-template)
-%
 %
 % ---------------------------------------------------------------------------- %
 
