updates for 2020 standards

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -34,24 +34,25 @@
 \title{SOME CLEVER TITLE}
 \authorLast{LAST NAME}
 \authorFirst{FIRST NAME}
-\authorMiddle{}
+\authorMiddle{MIDDLE NAME}
 \education{
-B.S., University of Colorado: Denver, YYYY
+B.S., University of Colorado: Denver, YYYY \\
 M.S., University of Colorado: Denver, YYYY
 }
 \school{University of Colorado: Denver, College of Liberal Arts and Sciences}
 \program{Applied Mathematics}
-\date{2019}
-\submitDate{DD MM YYYY}
+\date{2020}
+\submitDate{Final day of semester (eg, December 12, 2020)}
 
-\advisor{Dr.~One One}
-\advisorTitle{Assistant Professor}
+\advisor{Co-advisor One}
+\advisorTitle{Professor \,}
+\coadvisor{Co-advisor Two}
+\coadvisorTitle{Professor \,}
 
-\committeeChair{Dr.~Two Two}
+\committeeChair{Chair Member}
 \committeeMembers{
-Dr.~Three Three \\
-Dr.~Four Four \\
-Dr.~Five Five
+Fourth Member \\
+Fifth Member
 }
 
 % dedication - this is also optional
@@ -60,7 +61,7 @@ Dr.~Five Five
 % preface
 \preface{
 \input{abstract.tex}
-\input{notation.tex}
+%\input{notation.tex}
 }
 
 % acknowledgement - this is optional
@@ -78,7 +79,7 @@ Dr.~Five Five
 % ---------------------------------------------------------------------------- %
 % Begin Document
 \begin{document}
-\chead{\color{red} DRAFT. Last compiled at \currenttime \ on \today }
+\chead{\small \color{red} DRAFT. Last compiled at \currenttime \ on \today }
 
 \input{chapter01}
 \input{chapter02}
