--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -14,6 +14,10 @@
 \usepackage[ruled, vlined]{env/algorithm2e}
 % source: https://ctan.org/tex-archive/macros/latex/contrib/algorithm2e/tex
 
+% Using ragged2e package to get left-justified, ragged-right text throughout body (JH)
+\usepackage[document]{ragged2e}
+\setlength{\RaggedRightParindent}{\parindent}
+
 % ----------------------------------------------------------------------------- %
 % Float setup
 \usepackage{placeins}
