small tweaks to format details and set advisor option back as default

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -44,13 +44,14 @@ M.S., University of Colorado: Denver, YYYY
 \date{2020}
 \submitDate{Final day of semester (eg, December 12, 2020)}
 
-\advisor{Co-advisor One}
-\advisorTitle{Professor \,}
-\coadvisor{Co-advisor Two}
-\coadvisorTitle{Professor \,}
+\advisor{Advisor Name}
+\advisorTitle{Professor}
+%\coadvisor{Co-advisor Two} %% Turn on for co-advisors!
+%\coadvisorTitle{Professor}
 
 \committeeChair{Chair Member}
 \committeeMembers{
+Third Member \\
 Fourth Member \\
 Fifth Member
 }
