--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -11,7 +11,7 @@
 \usepackage{paralist}
 \usepackage{xparse}
 \usepackage{enumerate}
-\usepackage[ruled, vlined]{algorithm2e} % no need to env call.
+\usepackage[ruled, vlined]{env/algorithm2e}
 \providecommand\algorithmname{algorithm}
 
 % Using ragged2e package to get left-justified, ragged-right text throughout body (JH)
