linting and style stuff

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -51,6 +51,7 @@ M.S., University of Colorado: Denver, YYYY
 
 \committeeChair{Chair Member}
 \committeeMembers{
+Second Member \\
 Third Member \\
 Fourth Member \\
 Fifth Member
