--- a/dissertation.tex
+++ b/dissertation.tex
@@ -31,7 +31,7 @@
 % FRONT MATTER
 
 \makeatletter
-\title{SOME CLEVER TITLE}
+\title{A FORMAL TITLE}
 \authorLast{LAST NAME}
 \authorFirst{FIRST NAME}
 \authorMiddle{MIDDLE NAME}
@@ -83,11 +83,7 @@ Fifth Member
 \begin{document}
 \chead{\small \color{red} DRAFT. Last compiled at \currenttime \ on \today }
 
-\input{chapter01}
-\input{chapter02}
-% \input{chapter03}
-% \input{chapter04}
-% \input{chapter05}
+\input{main.tex}
 
 % ---------------------------------------------------------------------------- %
 \renewcommand\bibname{REFERENCES}
@@ -108,11 +104,7 @@ Fifth Member
 
 % ---------------------------------------------------------------------------- %
 % additional appendices
-\input{ch01/appendix}
-\input{ch02/appendix}
-%\input{ch03/appendix}
-%\input{ch04/appendix}
-%\input{ch05/appendix}
+\input{src/appendix.tex}
 
 % ---------------------------------------------------------------------------- %
 \end{document}
