fix advisor typo

--- a/ucdenver-dissertation-coadvisors.cls
+++ b/ucdenver-dissertation-coadvisors.cls
@@ -136,7 +136,7 @@
     \@program\ Program \\
     by \\[3in]
     \@committeeChair, Chair \\
-    \@advisor, Co-Advisor \\
+    \@advisor, Advisor \\
     \@coadvisor, Co-Advisor \\
     \@committeeMembers \\[1in]
   \end{center}
