be explicit about .bib files

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -91,7 +91,7 @@ Fifth Member
 
 \nocite{*}
 \bibliographystyle{ref/ucdDissertation}
-\bibliography{ref/references,ref/references-code}
+\bibliography{ref/references.bib,ref/references-code.bib}
 
 \doublespacing
 
