move dependency into env file

--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -45,5 +45,8 @@
 
 
 
+\usepackage{mathtools} % for \xmapsto
+\usepackage{array}
+\renewcommand\arraystretch{0.5}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
