--- a/dissertation.tex
+++ b/dissertation.tex
@@ -42,12 +42,12 @@ M.S., University of Colorado: Denver, YYYY
 \school{University of Colorado: Denver, College of Liberal Arts and Sciences}
 \program{Applied Mathematics}
 \date{2020}
-\submitDate{Final day of semester (eg, December 12, 2020)}
+\submitDate{Final day of semester (e.g., December 12, 2020)}
 
 \advisor{Advisor Name}
 \advisorTitle{Professor}
-%\coadvisor{Co-advisor Two} %% Turn on for co-advisors!
-%\coadvisorTitle{Professor}
+%\coadvisor{Co-advisor Two} %% CO-ADVISOR
+%\coadvisorTitle{Professor} %% CO-ADVISOR
 
 \committeeChair{Chair Member}
 \committeeMembers{
