explicit with .tex files input

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -8,14 +8,14 @@
 % ---------------------------------------------------------------------------- %
 
 \documentclass[english,10pt]{ucdenver-dissertation}
-\input{env/usepackages}
-\input{env/newcommands}
-\input{env/pythonenv}
+\input{env/usepackages.tex}
+\input{env/newcommands.tex}
+\input{env/pythonenv.tex}
 % enables the following:
 % \pythonexternal{demo.py}
 % \begin{python}-\end{python}
 % \pythoninline{import bet}
-\input{env/bashenv}
+\input{env/bashenv.tex}
 % enables the same functions, but with bash.
 \usepackage{lipsum}
 
