--- a/ucdenver-dissertation-coadvisors.cls
+++ b/ucdenver-dissertation-coadvisors.cls
@@ -144,7 +144,7 @@
     \@committeeMembers \\[1in]
   \end{center}
   \begin{flushright}
-    Date \underline{\@submitDate}
+    Date: \@submitDate
   \end{flushright}
   \vspace*{\fill}
 }
