supress warning about algorithm2e

--- a/env/usepackages.tex
+++ b/env/usepackages.tex
@@ -35,7 +35,7 @@
 
 
 \usepackage{enumerate}
-\usepackage[ruled, vlined]{env/algorithm2e}
+\usepackage[ruled, vlined]{algorithm2e}
 \providecommand\algorithmname{algorithm}
 
 % Using ragged2e package to get left-justified, ragged-right text throughout body
