--- a/dissertation.tex
+++ b/dissertation.tex
@@ -2,9 +2,10 @@
 % file: disseration.tex
 % author: YOUR NAME HERE
 %
-% LaTeX based on work by Michael Pilosov and Sarah Kreidler and Peter DeWitt
-% (github.com/dewittpe/ucd-dissertation-template)
-%
+% LaTeX based on work by Sarah Kreidler and Peter DeWitt, updated by
+% Michael Pilosov and Jordan Hall
+% (github.com/dewittpe/ucd-dissertation-template) updated in 2020 to
+% (https://github.com/mathematicalmichael/dissertation-template/)
 % ---------------------------------------------------------------------------- %
 
 \documentclass[english,10pt]{ucdenver-dissertation}
