move tex files to src

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -63,7 +63,7 @@ Fifth Member
 
 % preface
 \preface{
-\input{abstract.tex}
+\input{src/abstract.tex}
 %\input{notation.tex}
 }
 
@@ -81,7 +81,7 @@ Fifth Member
 \begin{document}
 \chead{\small \color{red} DRAFT. Last compiled at \currenttime \ on \today }
 
-\input{main.tex}
+\input{src/main.tex}
 
 % ---------------------------------------------------------------------------- %
 \renewcommand\bibname{REFERENCES}
