--- a/src/first.tex
+++ b/src/first.tex
@@ -1,7 +1,30 @@
 \section{First Section}
-\lipsum[2]
+\lipsum[1]
 
 \subsection{A Subsection}
 \lipsum[2]
 
+\subsubsection{A Subsubsection}
+\lipsum[3]
+
+\lipsum[4]
+
+\lipsum[5]
+
 \input{fig/diagram-a.tex}
+
+\begin{table}[h]
+\caption{Summary of Notation}
+\begin{tabular}{ c  l } 
+ \hline
+\\ \textbf{ Symbol} & \textbf{Description}  \\ [1ex] 
+ \hline \\
+ $\mathbb{R}$ & set of real numbers\\  [1ex]
+ $\mathbb{N}$ & set of natural numbers, beginning with $1$\\  [1ex]
+ $\mathbb{Z}$ & the set of integers\\  [1ex] 
+
+\end{tabular}
+\label{table:notations}
+\end{table}
+
+Observe the single-spaced entries in the table, required for CU Denver formatting.
